--- a/source/_posts/图像风格变换.md
+++ b/source/_posts/图像风格变换.md
@@ -2,4 +2,11 @@
 title: 图像风格变换
 date: 2021-07-10 00:54:15
 tags:
+cover: https://gitee.com/cd-yang/pic/raw/master/img/20210710103412.jpeg
 ---
+
+
+
+
+
+![image-20210710104000250](https://gitee.com/cd-yang/pic/raw/master/img/20210710104000.png)
