add cover for memory&exe

--- a/source/_posts/程序是怎么跑起来的-1.md
+++ b/source/_posts/程序是怎么跑起来的-1.md
@@ -3,8 +3,8 @@ title: 程序是怎么跑起来的-1
 date: 2021-10-06 00:13:21
 tags: 
 - CPU
-categories:
-- Operation System
+categories: Operation System
+cover: https://gitee.com/cd-yang/pic/raw/master/img/202110062246403.jpg
 ---
 
 # CPU的组成
