--- a/source/_posts/程序的内存分布.md
+++ b/source/_posts/程序的内存分布.md
@@ -5,6 +5,7 @@ tags:
 - Memory
 - CPP
 category: Operation System
+cover: https://gitee.com/cd-yang/pic/raw/master/img/202110062240345.jpeg
 ---
 
 # 程序的内存分布结构
