memory to operating

--- a/source/_posts/程序的内存分布.md
+++ b/source/_posts/程序的内存分布.md
@@ -4,7 +4,7 @@ date: 2021-10-06 19:37:51
 tags:
 - Memory
 - CPP
-category: Operation System
+category: Operating System
 cover: https://gitee.com/cd-yang/pic/raw/master/img/202110062240345.jpeg
 ---
 
