--- a/source/_posts/程序是怎么跑起来的-1.md
+++ b/source/_posts/程序是怎么跑起来的-1.md
@@ -4,14 +4,14 @@ date: 2021-10-06 00:13:21
 tags: 
 - CPU
 categories: Operating System
-cover: https://gitee.com/cd-yang/pic/raw/master/img/202110062246403.jpg
+cover: https://yang-img-weng.oss-cn-hangzhou.aliyuncs.com/images/202110062246403.jpg
 ---
 
 # CPU的组成
 
 ​		CPU的内部由寄存器、控制器、运算器和时钟四个部分构成（有的时钟在CPU之外）
 
-![image-20211006002224075](https://gitee.com/cd-yang/pic/raw/master/img/202110060022125.png)
+![image-20211006002224075](https://yang-img-weng.oss-cn-hangzhou.aliyuncs.com/images/202110060022125.png)
 
 ​		CU控制单元，ALU算术逻辑单元。
 
