--- a/source/_posts/程序的内存分布.md
+++ b/source/_posts/程序的内存分布.md
@@ -5,7 +5,7 @@ tags:
 - Memory
 - CPP
 category: Operating System
-cover: https://gitee.com/cd-yang/pic/raw/master/img/202110062240345.jpeg
+cover: https://yang-img-weng.oss-cn-hangzhou.aliyuncs.com/images/202110062240345.jpeg
 ---
 
 # 程序的内存分布结构
@@ -25,7 +25,7 @@ cover: https://gitee.com/cd-yang/pic/raw/master/img/202110062240345.jpeg
 - 栈
   - 用于存储函数内部定义的局部变量，以及存储与函数调用相关的数据，如返回地址、参数等
 
-![image-20211006194121438](https://gitee.com/cd-yang/pic/raw/master/img/202110061941498.png)
+![image-20211006194121438](https://yang-img-weng.oss-cn-hangzhou.aliyuncs.com/images/202110061941498.png)
 
 ## 参考内容
 
